force-app/main/default/objects/opa_manager__c/opa_manager__c.object-meta.xml
<CustomObject>
    <label>opa_manager</label>
    <nameField>
        <label>opa_manager</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opa_managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>