force-app/main/default/objects/opa_manager__c/fields/acc_linked__c.field-meta.xml
<CustomField>
    <fullName>acc_linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>acc linked</label>
    <type>Checkbox</type>
</CustomField>