force-app/main/default/objects/opa_manager__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>opa_managers</relationshipLabel>
    <relationshipName>opa_managers</relationshipName>
    <type>Lookup</type>
</CustomField>