force-app/main/default/objects/opa_manager__c/fields/beschikbaar_per__c.field-meta.xml
<CustomField>
    <fullName>beschikbaar_per__c</fullName>
    <label>beschikbaar_per</label>
    <type>Date</type>
</CustomField>