force-app/main/default/objects/opa_manager__c/fields/beschikbaar_per_modified__c.field-meta.xml
<CustomField>
    <fullName>beschikbaar_per_modified__c</fullName>
    <label>beschikbaar_per_modified</label>
    <type>Date</type>
</CustomField>