force-app/main/default/objects/opa_manager__c/fields/beschikbaar_toelichting__c.field-meta.xml
<CustomField>
    <fullName>beschikbaar_toelichting__c</fullName>
    <label>beschikbaar_toelichting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>