force-app/main/default/objects/opa_manager__c/fields/birth_day__c.field-meta.xml
<CustomField>
    <fullName>birth_day__c</fullName>
    <label>birth_day</label>
    <type>Date</type>
</CustomField>