force-app/main/default/objects/opa_manager__c/fields/blacklist__c.field-meta.xml
<CustomField>
    <fullName>blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>blacklist</label>
    <type>Checkbox</type>
</CustomField>