force-app/main/default/objects/opa_manager__c/fields/check_paspoort__c.field-meta.xml
<CustomField>
    <fullName>check_paspoort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>check_paspoort</label>
    <type>Checkbox</type>
</CustomField>