force-app/main/default/objects/opa_manager__c/fields/check_paspoort_datum_verlopen__c.field-meta.xml
<CustomField>
    <fullName>check_paspoort_datum_verlopen__c</fullName>
    <label>check_paspoort_datum_verlopen</label>
    <type>Date</type>
</CustomField>