force-app/main/default/objects/opa_manager__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <label>created</label>
    <type>DateTime</type>
</CustomField>