force-app/main/default/objects/opa_manager__c/fields/email_reserve__c.field-meta.xml
<CustomField>
    <fullName>email_reserve__c</fullName>
    <label>email_reserve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>