force-app/main/default/objects/opa_manager__c/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <label>error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>