force-app/main/default/objects/opa_manager__c/fields/gevonden_via__c.field-meta.xml
<CustomField>
    <fullName>gevonden_via__c</fullName>
    <label>gevonden_via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>