force-app/main/default/objects/opa_manager__c/fields/gevonden_via_anders__c.field-meta.xml
<CustomField>
    <fullName>gevonden_via_anders__c</fullName>
    <label>gevonden_via_anders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>