force-app/main/default/objects/opa_manager__c/fields/inschrijfdatum__c.field-meta.xml
<CustomField>
    <fullName>inschrijfdatum__c</fullName>
    <label>inschrijfdatum</label>
    <type>Date</type>
</CustomField>