force-app/main/default/objects/opa_manager__c/fields/inzet_toelichting__c.field-meta.xml
<CustomField>
    <fullName>inzet_toelichting__c</fullName>
    <label>inzet_toelichting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>