force-app/main/default/objects/opa_manager__c/fields/inzetbaar__c.field-meta.xml
<CustomField>
    <fullName>inzetbaar__c</fullName>
    <label>inzetbaar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>