force-app/main/default/objects/opa_manager__c/fields/inzetbaar_als__c.field-meta.xml
<CustomField>
    <fullName>inzetbaar_als__c</fullName>
    <label>inzetbaar_als</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>