force-app/main/default/objects/opa_manager__c/fields/is_excel_imported__c.field-meta.xml
<CustomField>
    <fullName>is_excel_imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_excel_imported</label>
    <type>Checkbox</type>
</CustomField>