force-app/main/default/objects/opa_manager__c/fields/is_linkedin_import__c.field-meta.xml
<CustomField>
    <fullName>is_linkedin_import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_linkedin_import</label>
    <type>Checkbox</type>
</CustomField>