force-app/main/default/objects/opa_manager__c/fields/isMapped__c.field-meta.xml
<CustomField>
    <fullName>isMapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMapped</label>
    <type>Checkbox</type>
</CustomField>