force-app/main/default/objects/opa_manager__c/fields/job_perm__c.field-meta.xml
<CustomField>
    <fullName>job_perm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>job_perm</label>
    <type>Checkbox</type>
</CustomField>