force-app/main/default/objects/opa_manager__c/fields/job_temp__c.field-meta.xml
<CustomField>
    <fullName>job_temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>job_temp</label>
    <type>Checkbox</type>
</CustomField>