force-app/main/default/objects/opa_manager__c/fields/LegacyOpaID_Person__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID_Person__c</fullName>
    <label>LegacyOpaID__Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>