force-app/main/default/objects/opa_manager__c/fields/linkedin_found_status__c.field-meta.xml
<CustomField>
    <fullName>linkedin_found_status__c</fullName>
    <label>linkedin_found_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>