force-app/main/default/objects/opa_manager__c/fields/linkedin_public_profile__c.field-meta.xml
<CustomField>
    <fullName>linkedin_public_profile__c</fullName>
    <label>linkedin_public_profile</label>
    <type>Url</type>
</CustomField>