force-app/main/default/objects/opa_manager__c/fields/linkedin_recruiter__c.field-meta.xml
<CustomField>
    <fullName>linkedin_recruiter__c</fullName>
    <label>linkedin_recruiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>