force-app/main/default/objects/opa_manager__c/fields/linkedin_recruiter_profile_url__c.field-meta.xml
<CustomField>
    <fullName>linkedin_recruiter_profile_url__c</fullName>
    <label>linkedin_recruiter_profile_url</label>
    <type>Url</type>
</CustomField>