force-app/main/default/objects/opa_manager__c/fields/mailshot_approved__c.field-meta.xml
<CustomField>
    <fullName>mailshot_approved__c</fullName>
    <label>mailshot_approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>