force-app/main/default/objects/opa_manager__c/fields/middle_name__c.field-meta.xml
<CustomField>
    <fullName>middle_name__c</fullName>
    <label>middle_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>