force-app/main/default/objects/opa_manager__c/fields/modified__c.field-meta.xml
<CustomField>
    <fullName>modified__c</fullName>
    <label>modified</label>
    <type>DateTime</type>
</CustomField>