force-app/main/default/objects/opa_manager__c/fields/name_prefix__c.field-meta.xml
<CustomField>
    <fullName>name_prefix__c</fullName>
    <label>name_prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>