force-app/main/default/objects/opa_manager__c/fields/opa_profile_photo__c.field-meta.xml
<CustomField>
    <fullName>opa_profile_photo__c</fullName>
    <label>opa_profile_photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>