force-app/main/default/objects/opa_manager__c/fields/opleiding__c.field-meta.xml
<CustomField>
    <fullName>opleiding__c</fullName>
    <label>opleiding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>