force-app/main/default/objects/opa_manager__c/fields/plaats__c.field-meta.xml
<CustomField>
    <fullName>plaats__c</fullName>
    <label>plaats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>