force-app/main/default/objects/opa_manager__c/fields/profile_updated__c.field-meta.xml
<CustomField>
    <fullName>profile_updated__c</fullName>
    <label>profile_updated</label>
    <type>DateTime</type>
</CustomField>