force-app/main/default/objects/opa_manager__c/fields/quail_questions_current_hourly_rate__c.field-meta.xml
<CustomField>
    <fullName>quail_questions_current_hourly_rate__c</fullName>
    <label>quail_questions_current_hourly_rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>