force-app/main/default/objects/opa_manager__c/fields/roepnaam__c.field-meta.xml
<CustomField>
    <fullName>roepnaam__c</fullName>
    <label>roepnaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>