force-app/main/default/objects/opa_manager__c/fields/studierichting__c.field-meta.xml
<CustomField>
    <fullName>studierichting__c</fullName>
    <label>studierichting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>