force-app/main/default/objects/opa_manager__c/fields/tarief_freelancer__c.field-meta.xml
<CustomField>
    <fullName>tarief_freelancer__c</fullName>
    <label>tarief_freelancer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>