force-app/main/default/objects/opa_manager__c/fields/to_ignore__c.field-meta.xml
<CustomField>
    <fullName>to_ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>to_ignore</label>
    <type>Checkbox</type>
</CustomField>