force-app/main/default/objects/opa_manager__c/fields/type_vacature__c.field-meta.xml
<CustomField>
    <fullName>type_vacature__c</fullName>
    <label>type_vacature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>