force-app/main/default/objects/opa_manager__c/fields/var_status__c.field-meta.xml
<CustomField>
    <fullName>var_status__c</fullName>
    <label>var_status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>