force-app/main/default/objects/opa_manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>LegacyOpaID_Person__c</columns>
    <columns>LegacyOpaID_Company__c</columns>
    <columns>name_prefix__c</columns>
    <columns>first_name__c</columns>
    <columns>middle_name__c</columns>
    <columns>last_name__c</columns>
    <columns>birth_day__c</columns>
    <columns>email__c</columns>
    <columns>phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>